# ashen-frontier

./: .gitignore  Cargo.toml  README.md  cbindgen.toml
apple/: build-xcframework.sh
apple/ios/: README.md
apple/ios/AshenFrontierIOS/: AppDelegate.swift  AppSettings.swift  GameView.swift  GameViewController.swift  Info.plist  MainMenuViewController.swift  SettingsViewController.swift
apple/ios/AshenFrontierIOS.xcodeproj/: project.pbxproj
apple/macos/: Package.swift  README.md  build-rust.sh  generate-headers.sh  verify-generated-headers.sh
apple/macos/Sources/AshenFrontierBridge/: bridge.c  module.modulemap
apple/macos/Sources/AshenFrontierBridge/include/: ashen_frontier.h
apple/macos/Sources/AshenFrontierMac/: GameController.swift  GameView.swift  Renderer.swift  RustWorld.swift  main.swift
apple/macos/Sources/AshenFrontierMac/Shaders/: AshenShaders.metal
crates/game_app/: Cargo.toml
crates/game_app/src/: main.rs
crates/game_sim/: Cargo.toml
crates/game_sim/src/: lib.rs
docs/: architecture.md  workflow.md
src/: ffi.rs  lib.rs  main.rs  sim.rs
tests/: apple_platform.rs  ffi_smoke.rs  generated_header.rs  performance_guards.rs
xtask/: Cargo.toml
xtask/src/: main.rs
