[package]
name = "ashen-frontier"
version = "0.1.0"
edition = "2024"
license = "UNLICENSED"
rust-version = "1.96"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["rlib", "staticlib"]

[[bin]]
name = "ashen-frontier"
path = "src/main.rs"
required-features = ["bevy-prototype"]

[features]
default = ["bevy-prototype"]
bevy-prototype = ["dep:bevy"]

[dependencies]
bevy = { version = "0.19.0", optional = true }

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = "warn"
pedantic = "warn"
